# ENSAI-2A-S2-ConceptionLog

./: .env.load  .env.template  .gitignore  README.md  environment_printer.py  main.py  pyproject.toml  ruff.toml
scripts/: import_json_base.py  import_new_jsons.py
src/api/: api.py
src/api/core/: config.py
src/api/routers/: global_stats_router.py  login.py  login_router.py  matches_router.py  player_search_router.py  rank_router.py  users.py
src/api/schemas/: global_stats.py
src/dao/: db_connection.py  match_participation_dao.py  match_teams_dao.py  matches_dao.py  platforms_dao.py  players_dao.py  ranks_dao.py  stats_boost_dao.py  stats_core_dao.py  stats_movement_dao.py  stats_positionning_dao.py
src/database/: drawSQL-pgsql-export-2026-01-27.sql
src/database/temp/: id-date-list-temp.json  raw_game_list.json
src/models/: match_participation.py  match_teams.py  matches.py  platforms.py  players.py  ranks.py  stats_boost.py  stats_core.py  stats_movement.py  stats_positionning.py
src/service/: match_participation_service.py  match_teams_service.py  matches_service.py  platforms_service.py  players_service.py  ranks_service.py  stats_core_service.py
src/service/collector/: api_client.py  db_importer.py  (+4 more)
src/utils/: enumeration.py
tests/tests_dao/: test_match_participation_dao.py  test_match_teams_dao.py  test_matches_dao.py  test_players_dao.py  test_ranks_dao.py
tests/tests_service/: test_match_participation_service.py  test_match_teams_service.py  test_matches_service.py  test_platforms_service.py  test_players_service.py  test_ranks_service.py
